# ChangeLog for dev-tex/chkltex
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*chkltex-2.5.1-r1 (14 Aug 2013)

  14 Aug 2013; Martin Väth <martin@mvath.de>:
  Change install path to comply with texlive-2013

*chkltex-2.5.1 (11 Apr 2011)

  21 Sep 2012; Martin Väth <martin@mvath.de>:
  Bump to EAPI=5

  12 May 2012; Martin Väth <martin@mvath.de>:
  base->eutils

  15 Apr 2012; Martin Väth <martin@mvath.de>:
  Inherit base

  11 Apr 2011; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild.

*chkltex-2.5 (16 Aug 2010)

  03 Jan 2011; Martin Väth <martin@mvath.de>:
  Bump to EAPI=4.

  17 Aug 2010; Martin Väth <martin@mvath.de>:
  Redigest. Removing POSIX patch since it was put into upstream tarball

  16 Aug 2010; Martin Väth <martin@mvath.de>:
  Bump. Removing patch since it is now in upstream package :)
  Cleanup ebuild since DISTDIR is now supported by upstream.

*chkltex-2.4 (23 Apr 2010)

  12 Aug 2010; Martin Väth <martin@mvath.de>:
  Add a patch to find uncited bibliography entries

  27 Apr 2010; Martin Väth <martin@mvath.de>:
  Use ${ED} in install phase

  24 Apr 2010; Martin Väth <martin@mvath.de>:
  Add RESTRICT="mirror"

  23 Apr 2010; Martin Väth <martin@mvath.de>:
  Build from scratch