@@ -1,1 +1,1 @@
-DIST chklref-2.5.1.tar.gz 55535 SHA256 719e3aa2c4539831d87a799f34c4529d42f0f464a497439611bc7dbedc420b19 SHA512 7357687ad1675092c551d15ad2b70a720893cdf52b1b59a5131b6b12f58cade062221f978396f2fddbce12755ff079d3f9bdf7b4b09b6acfa91ad98f7d1bf28e WHIRLPOOL a9d0592a6e6472680f33cb7a7ef67f047d7c9f5caa445f57fb9ce7c3eb54cab0aff8cab4daf22ddc01bcdb81a80e59f49760397e4547b7a1138fc4373f7a8d66
+DIST chklref-2.5.2.tar.gz 60609 SHA256 b9a0e3d38d76532a86abffd220c559a9702bba80be999bfa20d1285b9814c9c4 SHA512 7c140bb9c067c5dc9560fe305da9fd73cd643486b5b5b8dfd4f550e1881e398677cffb3bff306a2a40d6e49349342b8bdb0a8cfb3672c3f72204dcaf4c28da94 WHIRLPOOL fcb450182dfb1efa9e6738de15110c5bf9e9ec64a97df1a2bebab9942b9950b4050a7194b771d6eef09ca62fbbbe743b7a6fa3eecaa4dbed4929a9dbadc302ef
