@@ -16,25 +16,26 @@ SLOT="0"
 KEYWORDS=""
 IUSE=""
 
-RDEPEND="sys-libs/zlib"
-DEPEND="${RDEPEND}
-	app-arch/xz-utils"
+DEPEND="app-arch/xz-utils
+	sys-libs/zlib"
+RDEPEND="${DEPEND}
+	sys-apps/gentoo-functions"
 
 src_prepare() {
 	# make sure we always use system zlib
-	rm -rf zlib
+	rm -rf zlib || die
 	epatch "${FILESDIR}"/${PN}-3.1.7-no-perl.patch #421609
 	epatch "${FILESDIR}"/${PN}-3.1.10-size-on-disk.patch #456178
 	sed \
 		-e "/^EPREFIX=/s:'':'${EPREFIX}':" \
-		"${FILESDIR}"/ccache-config-2 > ccache-config || die
+		"${FILESDIR}"/ccache-config-3 > ccache-config || die
 	epatch_user
 	eautoreconf
 }
 
 src_install() {
+	DOCS=( AUTHORS.txt MANUAL.txt NEWS.txt README.txt )
 	default
-	dodoc AUTHORS.txt MANUAL.txt NEWS.txt README.txt
 
 	dobin ccache-config
 
@@ -64,8 +65,8 @@ pkg_postinst() {
 	"${EROOT}"/usr/bin/ccache-config --install-links ${CHOST}
 
 	# nuke broken symlinks from previous versions that shouldn't exist
-	rm -f "${EROOT}"/usr/lib/ccache/bin/${CHOST}-cc
-	rm -rf "${EROOT}"/usr/lib/ccache.backup
+	rm -f "${EROOT}"/usr/lib/ccache/bin/${CHOST}-cc || die
+	rm -rf "${EROOT}"/usr/lib/ccache.backup || die
 
 	readme.gentoo_print_elog
 }
