@@ -1,1 +1,1 @@
-DIST noscript-2.6.9.7.xpi 543953 SHA256 076698ebc51f14c8efcde06a5d478764f5f4bc669c0271f78114eede72baee3a SHA512 748d6c405c98f1028b6ca128422fd597f9c73fc09ac45bdc5192df3c66ebc55ed139cb919ba7aa05d118f0536889de8db6f1e542e3c067ede60e29cc8222e01c WHIRLPOOL 5a1cc85314f6da600d5e8b907a1e89744df4f5637aa41deda70ac621dfb208716ba4653380b5367ea5304c70a402ad6d26e76766334fb88e00cef3ebc9a55d3f
+DIST noscript-2.6.9.8.xpi 544215 SHA256 71c87a108ed08eadc900e8e543bd79c1abd79a9839cec4be759f5d143be76115 SHA512 f7ffff0bc1cfd111de67cf1d2c3904772b921c489c98df24025e10b231f05e3ecf7575b93524884f8042d75c736197a9f80ab4f86f7c57b4859a98190a7f76f3 WHIRLPOOL 738e79b688fc8e5ae42e1dbbe2d0b7802ab3e7531988d3ebc043d36d3d65c114a933387b06d48ff88e6a81838d5b45e4fd536f607b659e1225c1afce90376ea3
