@@ -2,6 +2,9 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  23 Dec 2014; Martin Väth <martin@mvath.de>:
+  Bump ebuild from tree
+
   20 Nov 2014; Martin Väth <martin@mvath.de>:
   Update ebuild from tree
 
