@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*noscript-2.6.9.8 (23 Dec 2014)
+
+  23 Dec 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
 *noscript-2.6.9.7 (16 Dec 2014)
 
   16 Dec 2014; Martin Väth <martin@mvath.de>:
