@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*chkltex-2.5.2 (23 Dec 2014)
+
+  23 Dec 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
 *chkltex-2.5.1-r1 (14 Aug 2013)
 
   14 Aug 2013; Martin Väth <martin@mvath.de>:
@@ -31,7 +36,7 @@
 
   16 Aug 2010; Martin Väth <martin@mvath.de>:
   Bump. Removing patch since it is now in upstream package :)
-  Cleanup ebuild since DISTDIR is now supported by upstream.
+  Cleanup ebuild since DISTDIR is now supported by upstream
 
 *chkltex-2.4 (23 Apr 2010)
 
